--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3.9"
 services:
   eclipse-mosquitto:
     image: eclipse-mosquitto
+    volumes:
+    - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
     ports:
     - "1883:1883"
     - "9001:9001"
-  eclipse-mosquitto-timer:
+  mosquitto-bezeroa:
     build: .
