--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -3,9 +3,13 @@ services:
   eclipse-mosquitto:
     image: eclipse-mosquitto
     volumes:
+    - log-volumen:/mosquitto/log
     - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
     ports:
     - "1883:1883"
     - "9001:9001"
   mosquitto-bezeroa:
     build: .
+volumes:
+  log-volumen:
+    external: true
